Recruiting Model/main/default/objects/HR_Applicant__c/fields/Applicant_Source__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Source__c</fullName>
    <inlineHelpText>Please enter the source for this applicant.</inlineHelpText>
    <label>Applicant Source</label>
    <length>100</length>
    <type>Text</type>
</CustomField>