Recruiting Model/main/default/objects/HR_Applicant__c/fields/Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Birth__c</fullName>
    <inlineHelpText>Please enter the applicant date of birth</inlineHelpText>
    <label>Date of Birth</label>
    <type>Date</type>
</CustomField>