Recruiting Model/main/default/objects/HR_Applicant__c/fields/Travel_Preferred__c.field-meta.xml
<CustomField>
    <fullName>Travel_Preferred__c</fullName>
    <inlineHelpText>Please select the desired travel.</inlineHelpText>
    <label>Travel Preferred</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Non-Travel</fullName>
            </value>
            <value>
                <fullName>Some Travel</fullName>
            </value>
            <value>
                <fullName>Domestic Travel</fullName>
            </value>
            <value>
                <fullName>International Travel</fullName>
            </value>
            <value>
                <fullName>No Limits</fullName>
            </value>
            <value>
                <fullName>Travel Frequently</fullName>
            </value>
            <value>
                <fullName>Travel Rarely</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>