Recruiting Model/main/default/objects/HR_Applicant__c/listViews/My_Applications.listView-meta.xml
<ListView>
    <fullName>My_Applications</fullName>
    <columns>NAME</columns>
    <columns>HR_Position__c</columns>
    <columns>HR_Status__c</columns>
    <columns>HR_Contact__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Applications</label>
</ListView>